--- a/src/Kooco.Pikachu.Blazor/Pages/Freebies/EditFreebie.razor
+++ b/src/Kooco.Pikachu.Blazor/Pages/Freebies/EditFreebie.razor
@@ -237,17 +237,30 @@
                 <div class="row mt-1">
                     <div class="col-2">
                     </div>
-                    <div class="col-2">
-                        <Label>@L["AmountReach"]</Label>
-                        <div class="input-group">
-                            <Span Class="bg-primary text-light px-2 py-1">$</Span>
-                            <NumericEdit TValue="decimal" @bind-Value="UpdateFreebieDto.MinimumAmount" Size="Size.Small" />
+                    @if (UpdateFreebieDto.FreebieOrderReach==FreebieOrderReach.MinimumAmount)
+                    {
+                        <div class="col-2">
+                            <Label>@L["AmountReach"]</Label>
+                            <div class="input-group">
+                                <Span Class="bg-primary text-light px-2 py-1">$</Span>
+                                <NumericEdit TValue="decimal?" @bind-Value="UpdateFreebieDto.MinimumAmount" Size="Size.Small" />
+                            </div>
                         </div>
-                    </div>
+                    }else
+                    {
+                        <div class="col-2">
+                            <Label>@L["QuantityReach"]</Label>
+                            <div class="input-group">
+                                <Span Class="bg-primary text-light px-2 py-1">@L["Piece"]</Span>
+                                <NumericEdit TValue="int?" @bind-Value="UpdateFreebieDto.MinimumPiece" Size="Size.Small" />
+                            </div>
+                        </div>
+                    }
+                   
                     <div class="col-2">
                         <Label l>@L["Get"]</Label>
                         <div class="input-group">
-                            <NumericEdit Size="Size.Small" TValue="int" @bind-Value="UpdateFreebieDto.MinimumPiece" />
+                            <NumericEdit Size="Size.Small" TValue="int" @bind-Value="UpdateFreebieDto.FreebieQuantity" />
                             <Span Class="bg-primary text-light px-2 py-1">@L["Piece"]</Span>
                         </div>
                     </div>
@@ -271,7 +284,7 @@
                     </label>
                 </div>
                 <div class="col-9">
-                    <NumericEdit @bind-Value="UpdateFreebieDto.FreebieAmount" TValue="decimal">
+                    <NumericEdit @bind-Value="UpdateFreebieDto.FreebieAmount" TValue="decimal?">
                     </NumericEdit>
                 </div>
             </div>
