--- a/src/Kooco.Pikachu.Blazor/Pages/GroupBuyManagement/EditGroupBuy.razor
+++ b/src/Kooco.Pikachu.Blazor/Pages/GroupBuyManagement/EditGroupBuy.razor
@@ -3,6 +3,7 @@
 @using Kooco.Pikachu.EnumValues;
 @using Kooco.Pikachu.GroupBuys;
 @using Kooco.Pikachu.Items.Dtos;
+@using Microsoft.Extensions.Configuration;
 @using Pikachu.Items;
 @using Pikachu.Localization;
 @using Microsoft.Extensions.Localization;
@@ -14,6 +15,8 @@
 @inject NavigationManager NavigationManager
 @inject IStringLocalizer<PikachuResource> L
 @inject IMessageService _message
+@inject IConfiguration _configuration
+
 <style>
     .row {
         margin-top: 10px;
@@ -33,7 +36,7 @@
                     <label>@L["SalesURL1"]</label>
                 </div>
                 <div class="col-7">
-                    <TextEdit @bind-Text="@EditGroupBuyDto.EntryURL" />
+                    <TextEdit @bind-Text="@EditGroupBuyDto.EntryURL" ReadOnly />
                 </div>
             </div>
              <div class="row">
