--- a/src/Kooco.Pikachu.Blazor/Pages/GroupBuyManagement/EditGroupBuy.razor
+++ b/src/Kooco.Pikachu.Blazor/Pages/GroupBuyManagement/EditGroupBuy.razor
@@ -376,6 +376,7 @@
                         <i class="tag-input-placeholder-icon fa fa-plus"></i>
                     </div>
                 </div>
+                <span class="text-danger">@PaymentMethodError</span>
             </div>         
         </div>
         <div class="row">
