--- a/src/Kooco.Pikachu.Blazor/Pages/GroupBuyManagement/CreateGroupBuy.razor
+++ b/src/Kooco.Pikachu.Blazor/Pages/GroupBuyManagement/CreateGroupBuy.razor
@@ -387,6 +387,7 @@
                         <i class="tag-input-placeholder-icon fa fa-plus"></i>
                     </div>
                 </div>
+                <span class="text-danger">@PaymentMethodError</span>
             </div>
         </div>
         <div class="row">
