edit groupbuy debugging

--- a/src/Kooco.Pikachu.Blazor/Pages/GroupBuyManagement/EditGroupBuy.razor
+++ b/src/Kooco.Pikachu.Blazor/Pages/GroupBuyManagement/EditGroupBuy.razor
@@ -16,7 +16,7 @@
 @inject IStringLocalizer<PikachuResource> L
 @inject IMessageService _message
 @inject IConfiguration _configuration
-
+@inject IJSRuntime JsRuntime;
 <style>
     .row {
         margin-top: 10px;
