--- a/src/Kooco.Pikachu.Blazor/Pages/Orders/OrderDetails.razor
+++ b/src/Kooco.Pikachu.Blazor/Pages/Orders/OrderDetails.razor
@@ -74,7 +74,7 @@
                                     </tr>
                                     <tr>
                                         <td>@L["InvoiceCarrier"]</td>
-                                        <td>-</td>
+                                        <td>@Order.InvoiceType</td>
                                     </tr>
                                     <tr>
                                         <td>@L["ShippingMethod"]</td>
