--- a/src/Kooco.Pikachu.Blazor/Pages/Freebies/CreateFreebie.razor
+++ b/src/Kooco.Pikachu.Blazor/Pages/Freebies/CreateFreebie.razor
@@ -41,7 +41,7 @@
                         @L["ItemImages"]
                         <span class="text-danger">*</span>
                         <Span>
-                            <Tooltip Text="Upload upto 10 images">
+                            <Tooltip Text="@L["uploadUpto10Images"]">
                                 <Icon class="fa-question-circle "></Icon>
                             </Tooltip>
                         </Span>
