--- a/src/Kooco.Pikachu.Blazor/Pages/Freebies/EditFreebie.razor
+++ b/src/Kooco.Pikachu.Blazor/Pages/Freebies/EditFreebie.razor
@@ -37,7 +37,7 @@
                     <label>
                         @L["ItemImages"]
                         <span class="text-danger">*</span><Span>
-                            <Tooltip Text="Upload upto 10 images">
+                            <Tooltip Text="@L["uploadUpto10Images"]">
                                 <Icon class="fa-question-circle "></Icon>
                             </Tooltip>
                         </Span>
