--- a/src/Kooco.Pikachu.Blazor/Pages/GroupBuyManagement/CreateGroupBuy.razor
+++ b/src/Kooco.Pikachu.Blazor/Pages/GroupBuyManagement/CreateGroupBuy.razor
@@ -227,7 +227,7 @@
             <div class="col-2">
                 <label>
                     @L["CarouselImages"]<Span>
-                        <Tooltip Text="Upload upto 5 images">
+                        <Tooltip Text="@L["uploadUpto5Images"]">
 
                             <Icon class="fa-question-circle "></Icon>
                         </Tooltip>
@@ -522,7 +522,7 @@
                                 </AccordionToggle>
                             </CollapseHeader>
                             <CollapseBody>
-                                @if(module.GroupBuyModuleType == GroupBuyModuleType.ProductGroup)
+                                @if(module.GroupBuyModuleType == GroupBuyModuleType.ProductGroupModule)
                                     {
                                         <div class="d-flex justify-content-end">
                                             <div style="width: 60px;">
@@ -568,7 +568,7 @@
                                                     {
                                                         <div>
                                                             <img src="@firstImage" class="img-fluid" />
-                                                            @if(module.GroupBuyModuleType == GroupBuyModuleType.ProductGroup)
+                                                            @if(module.GroupBuyModuleType == GroupBuyModuleType.ProductGroupModule)
                                                             {
                                                                 <div class="row mt-2">
                                                                     <h4 class="text-center mt-2">
@@ -620,7 +620,7 @@
                                                             }
                                                         </div>
                                                     }
-                                                    @if (module.GroupBuyModuleType == GroupBuyModuleType.ProductDescription)
+                                                    @if (module.GroupBuyModuleType == GroupBuyModuleType.ProductDescriptionModule)
                                                     {
                                                         string? ItemDescription;
                                                         if (selectedItem.ItemType == ItemType.Item)
