--- a/src/Kooco.Pikachu.Blazor/Pages/GroupBuyManagement/EditGroupBuy.razor
+++ b/src/Kooco.Pikachu.Blazor/Pages/GroupBuyManagement/EditGroupBuy.razor
@@ -222,7 +222,7 @@
         </div>
         <div class="row">
             <div class="col-2">
-                <label>@L["CarouselImages"]<Span><Tooltip Text="Upload upto 5 images">
+                <label>@L["CarouselImages"]<Span><Tooltip Text="@L["uploadUpto5Images"]">
                 <Icon class="fa-question-circle "></Icon></Tooltip></Span></label>
             </div>
             <div class="col-10">
@@ -509,7 +509,7 @@
                                 </AccordionToggle>
                             </CollapseHeader>
                             <CollapseBody>
-                                @if(module.GroupBuyModuleType == GroupBuyModuleType.ProductGroup)
+                                @if(module.GroupBuyModuleType == GroupBuyModuleType.ProductGroupModule)
                                     {
                                         <div class="d-flex justify-content-end">
                                             <div style="width: 60px;">
@@ -566,7 +566,7 @@
                                                     {
                                                         <div>
                                                             <img src="@firstImage" class="img-fluid" />
-                                                            @if(module.GroupBuyModuleType == GroupBuyModuleType.ProductGroup)
+                                                            @if(module.GroupBuyModuleType == GroupBuyModuleType.ProductGroupModule)
                                                             {
                                                                 <div class="row mt-2">
                                                                     <h4 class="text-center mt-2">
@@ -618,7 +618,7 @@
                                                             }
                                                         </div>
                                                     }
-                                                    @if (module.GroupBuyModuleType == GroupBuyModuleType.ProductDescription)
+                                                    @if (module.GroupBuyModuleType == GroupBuyModuleType.ProductDescriptionModule)
                                                     {
                                                         string? ItemDescription;
                                                         if (selectedItem.ItemType == ItemType.Item)
