--- a/src/Kooco.Pikachu.Blazor/Pages/Orders/Order.razor
+++ b/src/Kooco.Pikachu.Blazor/Pages/Orders/Order.razor
@@ -30,7 +30,7 @@
                 <input type="checkbox" class="form-check-input" checked="@IsAllSelected" @onchange="HandleSelectAllChange"></input>
                 <Label Class="form-label">@L["SelectAll"]</Label>
             </div>
-            <Button Type="@ButtonType.Button" Class="btn btn-sm btn-secondary">@L["CombineItems"]</Button>
+            <Button Type="@ButtonType.Button" Class="btn btn-sm btn-secondary">@L["CombineOrders"]</Button>
             <Button Type="@ButtonType.Button" Class="btn btn-sm btn-primary">
                 <i class="fa fa-print"></i>
                 @L["Print"]
