--- a/src/Kooco.Pikachu.Blazor/Pages/ItemManagement/CreateItem.razor
+++ b/src/Kooco.Pikachu.Blazor/Pages/ItemManagement/CreateItem.razor
@@ -243,11 +243,12 @@
                         </div>
                     </div>
                 }
+                <Divider></Divider>
                 <div class="col-12 row">
                     <div class="col-2">
                         <label>@L["PriceAndInventory"]</label>
                     </div>
-                    <div class="col-10">
+                    <div class="col-12">
                         <div>
                             <Table>
                                 <TableHeader>
@@ -346,6 +347,7 @@
 
                     </div>
                 </div>
+                <Divider></Divider>
                 <div class="col-12 row">
                     <div class="col-2">
                         <label>@L["CommodityAttributes"]</label>
