--- a/src/Kooco.Pikachu.Blazor/Pages/ItemManagement/EditItem.razor
+++ b/src/Kooco.Pikachu.Blazor/Pages/ItemManagement/EditItem.razor
@@ -212,11 +212,12 @@
                 </div>
             </div>
         }
+        <Divider></Divider>
         <div class="col-12 row">
             <div class="col-2">
                 <label>@L["PriceAndInventory"]</label>
             </div>
-            <div class="col-10">
+            <div class="col-12">
                 <div>
                     <Table>
                         <TableHeader>
@@ -315,6 +316,7 @@
 
             </div>
         </div>
+        <Divider></Divider>
         <div class="col-12 row mt-2">
             <div class="col-2">
                 <label>@L["CommodityAttributes"]</label>
